# ChangeLog for dev-libs/gjs
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/gjs/ChangeLog,v 1.19 2013/03/28 16:44:24 pacho Exp $

*gjs-1.36.0 (28 Mar 2013)

  28 Mar 2013; Pacho Ramos <pacho@gentoo.org> +gjs-1.36.0.ebuild:
  Version bump for Gnome 3.8

  05 Mar 2013; Gilles Dartiguelongue <eva@gentoo.org> -gjs-1.30.1.ebuild,
  -gjs-1.32.0.ebuild:
  Clean up old revisions.

  28 Jan 2013; Alexis Ballier <aballier@gentoo.org> gjs-1.34.0.ebuild:
  keyword ~amd64-fbsd

  06 Jan 2013; Markus Meier <maekke@gentoo.org> gjs-1.34.0.ebuild:
  add ~arm, bug #449220

  06 Jan 2013; Agostino Sarubbo <ago@gentoo.org> gjs-1.34.0.ebuild:
  Add ~sparc, wrt bug #449220

  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org> gjs-1.34.0.ebuild:
  Add ~ia64, wrt bug #449220

  17 Dec 2012; Agostino Sarubbo <ago@gentoo.org> gjs-1.32.0.ebuild:
  Add ~ppc64, wrt bug #447426

  17 Dec 2012; Agostino Sarubbo <ago@gentoo.org> gjs-1.34.0.ebuild:
  Add ~ppc64, wrt bug #447426

*gjs-1.34.0 (25 Sep 2012)

  25 Sep 2012; Alexandre Rostovtsev <tetromino@gentoo.org> gjs-1.30.1.ebuild,
  gjs-1.32.0.ebuild, +gjs-1.34.0.ebuild:
  Version bump with a new GError class hierarchy. Make license more precise.

  13 Aug 2012; Anthony G. Basile <blueness@gentoo.org> gjs-1.32.0.ebuild:
  Keyword ~ppc, dep for bug #385237

  28 May 2012; Matt Turner <mattst88@gentoo.org> gjs-1.32.0.ebuild:
  Added ~alpha, bug 390345.

  04 May 2012; Jeff Horelick <jdhore@gentoo.org> gjs-1.30.1.ebuild,
  gjs-1.32.0.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  21 Apr 2012; Samuli Suominen <ssuominen@gentoo.org> -gjs-0.7.14.ebuild,
  -files/gjs-drop-js-config.patch:
  old

*gjs-1.32.0 (28 Mar 2012)

  28 Mar 2012; Alexandre Rostovtsev <tetromino@gentoo.org> -gjs-1.30.0.ebuild,
  +gjs-1.32.0.ebuild:
  Version bump. Adds system module, meta classes, better out parameter support,
  lots of bugfixes. Drop old.

*gjs-1.30.1 (14 Jan 2012)
