@@ -3,14 +3,16 @@ Hash: SHA256
 
 DIST gjs-1.34.0.tar.xz 474004 SHA256 3d62c717a0522a36c6faa1eb021872255e3cd285a72786afe23b7cca2e3084cb SHA512 938134f25f07e7cb9267f0f44944841d93143a3403cf002fc8393a342140b52b6540edfe90e5e0e1f10b40486914535ba6d57bb7c6e9f34ded11cde327293e1d WHIRLPOOL 53f11d800e69ea24b62b7f719118783fa0e397c807ee032baac3485031ae6627e20f7aa7b54fcc9cc850c0041e2b256fac5d076893d4ae5b784aa89b92508432
 DIST gjs-1.36.0.tar.xz 421836 SHA256 c55680d861d562f89171640c66e5d9ac4cb0c35f1af2495e2f45bbe494b983ca SHA512 d46659659e126de7c1b28ea8c6ace3adbe101e25e519ef93b56ab09c214477eacc915348cd7fc5aadc7bf841d7efdff67428efa3598927fc0a5c4f4e1d1ec20e WHIRLPOOL 17e2321ab67b6bc8715afb9bc6c54ccc60a6b4c4381815cec1e9ceae59c5231a7840330c7f034960181c9773fe3d86213868ceb0a14fee4230d25e49f9c2b79f
+DIST gjs-1.36.1.tar.xz 404664 SHA256 d259ef2d702fa9cc9948a35d0e701706d90798fd2855657b7e9ddc9a44dfcf87 SHA512 a2110d957f4179927d649b1da712bec7cc19cfeca48093712b7b3e8d81c06ae39752e2cbdec392c05d74343c98259af4b8c9f54448933e7e6143d9f963cfdd89 WHIRLPOOL 02676a5689d01a416775bd3cae50764f045f924c13024e289bc830ce38474585b4868aa758c5584ae715d2fba1422f6db7a92b2e5852117cb2711959d8ae6f0c
 EBUILD gjs-1.34.0.ebuild 1635 SHA256 eb74e813e37ebbe01f6a67047d7ee312ac38b8b6ba3057adfb49a23a1207b77f SHA512 086593e2b4862c8701ee928abd5b108742a8f4812f8a915e22c4a51d91e597adb9e01314756bf37882d819dc9526c4a86dbbc73ce86dc7b1dddc009caaed2552 WHIRLPOOL c8c1abb887fd3658578423535cc59a5afeedf3292343184acc354197a0abe2a10bec0b8c4243834abe648cbb36f6273e42582ebed854e96e3426be6710bda3e0
 EBUILD gjs-1.36.0.ebuild 1475 SHA256 36abbc3e9c8e66ccdcc20fcfbd3144166d24e3345af636a5f405a2adfbdf75bf SHA512 0dec89c1040cf8c3b03f8ca5578e3fecca3285c6b109dc7e8d50a0ebcfc1e958c8aa34a3fa37ea7e0ebc2b19d4e48c2cb9800c5491969f55ab328deabffce432 WHIRLPOOL 9f70cbb12ef50c4d76c0c98c3edf2613c2eac25c3c36935f5993e81da3adbe197facccadcb72481539271a3b094a0e3619a3b50588277a6a9fb02af3afb777a3
-MISC ChangeLog 2762 SHA256 f9396135dc28504ff5ecae165462e9b72c4f5f053ccfd47d635dd22b3a17f341 SHA512 bcfb3be04b8943aa93061b21979ed905d79af0c01975458389c6d0c8257a7c2dc97f9486abbe5dfe3cdcfd112203ae002ffa1092fe7d885e50be2d5ce929bee8 WHIRLPOOL 84ebca7141df90d1f61218f9669570560eeda347a870b8594bf3ef51c863a4d725c1462cc63d4863839fe79f792a2f25d7e5da991f5e989190f5c8c2bc4021a3
+EBUILD gjs-1.36.1.ebuild 1483 SHA256 df048ee1135eaa933f7db0cc2bb010c51b1f59cf747283186d7acfbcfbe0f024 SHA512 91fc31015bbd0392f573dde0d4223ec408c9e439295b89aa025b6c587935f069a2e3b3d0fc4e1444089ae222a030d6095f8ba4a7379d239b9bf3e53494b9012e WHIRLPOOL 8e3e0d70cee56e34a42696cc1fb3cd6e2ccce732f5762c17a5151f6f804b7e7c77d7fa9da9ed0e013e364c9a2ab195852d1ff31bf297a4cfb796383f0c504aec
+MISC ChangeLog 2871 SHA256 b492459e43a2ba1aa97d64f1b6d160e4a05a732494a15958f2fc3bb4992578c8 SHA512 2137c25a58099103ea728811a23a7495c4a7dcc3643f08f8b8742811121913af8272d36ed54b1ed92325123668ec8a974011a886a090d32f457bf93012a41fc5 WHIRLPOOL c93e1a796f6df38c9ae371534d30a599a45ee58004ba30552df216a3d0e2b5070ce258a5c188d364132125a1401d7d3c372f086d664d4a8b4d54d1ea6aeaaf30
 MISC metadata.xml 160 SHA256 4d793ecb79b17794248102d8409d16bc27b1022c72038bd2d1241e129693d5f2 SHA512 677650c05f31fc27035e12f3f5e4b095715dfe12d2d3483f800bfbc6e986a98dbb1997cd52ad7a177b5c120c9b87fe5a2452a4f0f9852ac9a58262e0c5d576c9 WHIRLPOOL 070602fb27fee6a25035c9e93f5c2422270a5781fd11dac318d3f5c32cf9e49163abf7999729df230d3e181b6a1362982744e1f0ac016bf59a3458ae23abbb83
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlFUc2kACgkQCaWpQKGI+9RVZACcCZcJbymv/9Ij0sVFzSXLLrjt
-iogAn3RU8Qd6ETEFKnx4x2iuNyRu2Iqw
-=fsqS
+iEYEAREIAAYFAlF1eQUACgkQCaWpQKGI+9R2XwCeLCThtdKAS61OmdL6FJ1jjXyx
+r8MAn2W2rmOjC15+2oHLFP4ok2bK94KN
+=v1ty
 -----END PGP SIGNATURE-----
