@@ -3,14 +3,16 @@ Hash: SHA256
 
 DIST gnome-clocks-0.1.5.tar.xz 478968 SHA256 42ee9924515fac1c57229057e57e37ea1a7915f9f43e64064f8e740433058b12 SHA512 e1c75ab5cc0a153469bc20385a1a85c11e0f2ac26fda46820f47e02f4cdfbdceb4033a1eab632299712bb31b83832920536b025071e5d0918f6f041a9e84ac5d WHIRLPOOL b4e953bfd0585939cc32b9a0b11513a80c04bf96c8b3a1de6029781f05cecfaec24161c84a215f1953cbf15dbb4944e7aa2e4d2e85e17c4e94e5c883b347be0d
 DIST gnome-clocks-3.8.0.tar.xz 789032 SHA256 35c78a9b1cab465b5c5ccd9c3591cfc3b27eaa0b9ad927bc52642ea3908d64e0 SHA512 c36a4a96299514d9f12437f555f85f386b0f696cb062f1f8ccaed380fef68b5fdf0dcf27331f1b87e8fb659d38ccd8563e8bac99dc712f7a24925e4023ef8a7a WHIRLPOOL d0c308036d46f6e95936f40e72fb0ad807e3953c8bda926a3bbdaf5d355f0fd8101eb249f1537cb62e164dc7ec3484733c845d59ed75a72bb9402c4e83808cdb
+DIST gnome-clocks-3.8.1.tar.xz 789520 SHA256 6140cc1ae41460c5fc799b2a52d809ed4cf9035a72be7e878160b5e591486d31 SHA512 05812d40876be5443019809839ed99fbdfd2ba3f2482466973e63ca9d9269e643fd57d650c96e798d2c269ad8bb17f8e43fb848b0dbc0ded966d5acf3a4eef1a WHIRLPOOL 3735cb12b9ea7b7d893f8fce1b4083fca1936b3c6e967a88edeb5c6d976ffd24be2318e3ff6b12f9697468713d58201d0d0d4883261af264ae9946a6cd87273a
 EBUILD gnome-clocks-0.1.5.ebuild 999 SHA256 0f0e16ceafdb85c31d710df8c48199190c967728df3910a825d80300c3c9d3e0 SHA512 db8b7527e0b56ed50b159702e5793d84e8615eb284f105755aea61911adf322b3e46cf0a8dd26a7bfd005815406406cac633ddb4155a7c685fb546dd802c1639 WHIRLPOOL a6d6c7aa89f111316ce208b871e44248373d376ccc10938ce88dc2ec0bf360b8462bbe92a16ac517844903f32154ad7882dad2a33ea2fa6a474131dbb63cdfcf
 EBUILD gnome-clocks-3.8.0.ebuild 674 SHA256 db77eecb33c15c43e81e472952a4c26eac18f8bad09a4f1e48fad1737c0b5a7d SHA512 a4aee768d364264f4572fc0498146f2071bef34a22b1118c0eec0c0c130b928bbebf129db2c06b31d31475d1a7545ed121bb3469616fbbc514187e24b7534678 WHIRLPOOL d183a7275b64d33305fa2fe8ac9153607709c7cd1154d743ea63b2e970d475b74d633e17d9533a512aea49d33f7d999c343e3a4855c51a4348de02adab22c7da
-MISC ChangeLog 573 SHA256 3b6c27e0821294177ca2c2cddc2d4714dc8a4a58a20d1095342252405d533876 SHA512 8d3bbe4e075a86a5399d7141dc30ac87ffe8c842617a100c15dee78a722fe036e3ae09217b4652ff7f8b85dd70ff88cabb80502169d227d0ed0bd46f7e43f302 WHIRLPOOL 0da117856dc1760c51a00c20221bf83d9692bd1e30f74c3e95365af4a5818e2eb02987ae083d9a67e4f84c6f2749cfbc3c6d2e67195c0090071e89d88294b50b
+EBUILD gnome-clocks-3.8.1.ebuild 676 SHA256 5e0e3efee07e08b6e567e3f72c879f0bd1144f5340a4e9fa4aeacbcd341dcd43 SHA512 6030f6e5955d5967378f338241e763619c8ba58480d46215edd814c38e10c83140ed0de2885b4720f44265b34f8cd23f80f6f3d8f7df3da2d8ccdee1bfe5d97a WHIRLPOOL e02cbc04ce8a0a14bde29577f7dcffdc1a2071c26cdfa96431b69ec6609c382818a65ea4a0a72c9aed981c5804a40a214ee74c42f0eb03dfd62331093dd54adc
+MISC ChangeLog 698 SHA256 ff9d5c06ad2be40c3ff50d3437c5d76730e15e5fd9beb6ce7ae2affbc70cfc6f SHA512 6b60dcbe3bbd0016e5a19dffa9e3ab224d04f99b21696fb5dbc6e969984607f95b3b22ce2d7326c72db8cb7d524c9ca9399fe202108c6dcb30d01483e6188781 WHIRLPOOL ab87809c6dee2619ce5006affe93ce937a2840650dd4e57fe76c7cb7e62516bb65952b69255d7f093622cae27b8c072bab81d637a8ac1ec807f502795870fd6c
 MISC metadata.xml 160 SHA256 4d793ecb79b17794248102d8409d16bc27b1022c72038bd2d1241e129693d5f2 SHA512 677650c05f31fc27035e12f3f5e4b095715dfe12d2d3483f800bfbc6e986a98dbb1997cd52ad7a177b5c120c9b87fe5a2452a4f0f9852ac9a58262e0c5d576c9 WHIRLPOOL 070602fb27fee6a25035c9e93f5c2422270a5781fd11dac318d3f5c32cf9e49163abf7999729df230d3e181b6a1362982744e1f0ac016bf59a3458ae23abbb83
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlFUezYACgkQCaWpQKGI+9RhPQCeLyoAuourik/DhYWkDUrcVgU1
-3/UAmQHOsgY5+VoRJU7nNKmGQU6BH8sv
-=k1nZ
+iEYEAREIAAYFAlF1egUACgkQCaWpQKGI+9RU7ACggIa+OzfT9Qty3LIq9Up8O8Gi
+gusAnic0kWVavfqpyxJ9c42SLKVsCkNu
+=gsf3
 -----END PGP SIGNATURE-----
