@@ -1,6 +1,11 @@
 # ChangeLog for gnome-extra/gnome-clocks
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-clocks/ChangeLog,v 1.2 2013/03/28 17:17:41 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-clocks/ChangeLog,v 1.3 2013/04/22 17:57:24 pacho Exp $
+
+*gnome-clocks-3.8.1 (22 Apr 2013)
+
+  22 Apr 2013; Pacho Ramos <pacho@gentoo.org> +gnome-clocks-3.8.1.ebuild:
+  Version bump
 
 *gnome-clocks-3.8.0 (28 Mar 2013)
 
