@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/gjs
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/gjs/ChangeLog,v 1.19 2013/03/28 16:44:24 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/gjs/ChangeLog,v 1.20 2013/04/22 17:53:08 pacho Exp $
+
+*gjs-1.36.1 (22 Apr 2013)
+
+  22 Apr 2013; Pacho Ramos <pacho@gentoo.org> +gjs-1.36.1.ebuild:
+  Version bump
 
 *gjs-1.36.0 (28 Mar 2013)
 
